--- a/data/index.html
+++ b/data/index.html
@@ -12,7 +12,7 @@
         <h1>Controle des LEDs NeoPixel</h1>
         <button id="changeColor">Couleur aleatoire </button>
         <div class="controls_phare">
-            <h1>Contrôle des phares</h1>
+            <h1>Controle des phares</h1>
             <div></div>
             <label for="leftHeadlightColor">Couleur phare gauche :</label>
             <input type="color" id="leftHeadlightColor" name="leftHeadlightColor">
