--- a/Web_tracky_portage_ESP32/data/index.html
+++ b/Web_tracky_portage_ESP32/data/index.html
@@ -1,62 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <title>Controle LEDs NeoPixel & Buzzer</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interface de Contrôle Robotique</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="nipplejs.min.js"></script>
+    <script src="jquery.min.js"></script> 
 </head>
-<section class="controls">
-    <header><h1>Systeme de controle de Tracky la voiture Wifi</h1></header>
-</section>
 <body>
-    <section class="controls_Tracky">
-        <div class="motor-controls">
-            <!-- Flèche du haut -->
-            <div class="motor">
-                <button id="En_Avant" class="arrow up"></button>
-            </div>
-            <!-- Ensemble central : Gauche, Stop (carré), Droite -->
-            <div class="motor-horizontal">
-                <div class="motor">
-                    <button id="Gauche" class="arrow left"></button>
-                </div>
-                <div class="motor">
-                    <button id="Stop" class="square"></button>
-                </div>
-                <div class="motor">
-                    <button id="Droite" class="arrow right"></button>
-                </div>
-            </div>
-            <!-- Flèche du bas -->
-            <div class="motor">
-                <button id="En_Arriere" class="arrow down"></button>
-            </div>
-        </div>
-    </section>
-    
-    
-    <section class="controls">
-        <h1>Controle des LEDs NeoPixel</h1>
-        <button id="changeColor">Couleur aleatoire </button>
-        <div class="controls_phare">
-            <h1>Controle des phares</h1>
-            <div></div>
-            <label for="leftHeadlightColor">Couleur phare gauche :</label>
-            <input type="color" id="leftHeadlightColor" name="leftHeadlightColor">
-            <input type="color" id="rightHeadlightColor" name="rightHeadlightColor">
-            <label for="rightHeadlightColor">Couleur phare droit :</label>
-    <div></div>
-            <button id="setHeadlightsColor">Appliquer</button>
-            <div></div>
-        </div>
-    </section>
-    <section class="controls">
-        <h1>Test du Buzzer</h1>
-        <button id="testBuzzer">Tester le Buzzer</button>
-    </section>
+    <div class="container">
+        <header>
+            <h1><i class="fas fa-robot"></i> Pilotage du Robot</h1>
+        </header>
 
-    <section><div class="image-cadre">
-        <img src="car.png" alt="car image auto">
-    </div></section>
+        <main>
+            <section class="joystick-section">
+                <h2><i class="fas fa-arrows-alt"></i> Contrôle de Mouvement</h2>
+                <div id="joystick-zone" class="joystick-zone"></div>
+            </section>
+
+            <section class="servo-section">
+                <h2><i class="fas fa-cogs"></i> Réglages des Actionneurs</h2>
+                <div class="servo-control">
+                    <input type="range" id="servoSlider_1" min="0" max="180" value="90" class="servo-slider">
+                    <label for="servoSlider_1">Actionneur 1: <span id="servoPos1">90</span>°</label>
+                </div>
+                <div class="servo-control">
+                    <input type="range" id="servoSlider_2" min="0" max="180" value="90" class="servo-slider">
+                    <label for="servoSlider_2">Actionneur 2: <span id="servoPos2">90</span>°</label>
+                </div>
+            </section>
+
+        </main>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
